# forgeerp

./: .env.example  Cargo.toml  LICENSE  MIGRATIONS.md  README.md  docker-compose.yml  env.example.template
.github/workflows/: migrate-example.yml
crates/accounting/: Cargo.toml
crates/accounting/src/: ledger.rs  lib.rs
crates/ai/: Cargo.toml  README.md
crates/ai/src/: inventory_anomaly.rs  job.rs  lib.rs  result.rs  scheduler.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: app.rs  authz.rs  context.rs  lib.rs  main.rs  middleware.rs
crates/api/src/app/: dto.rs  errors.rs  mod.rs  services.rs
crates/api/src/app/routes/: admin.rs  ar.rs  common.rs  customers.rs  event_stream.rs  events.rs  inventory.rs  invoices.rs  ledger.rs  mod.rs  products.rs  purchases.rs  rbac.rs  replay.rs  sales.rs  suppliers.rs  system.rs
crates/api/tests/: black_box_api.rs
crates/auth/: Cargo.toml  README.md
crates/auth/src/: authorize.rs  claims.rs  lib.rs  permissions.rs  principal.rs  roles.rs  user.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: aggregate.rs  entity.rs  error.rs  id.rs  lib.rs  value_object.rs
crates/desktop/: Cargo.toml  README.md  README_RUNNING.md  tauri.conf.json
crates/desktop/src/: cache.rs  command_queue.rs  commands.rs  lib.rs  main.rs  offline.rs  sync.rs  sync_manager.rs  sync_worker.rs  types.rs
crates/desktop/src/frontend/: README.md  api.rs  app.rs  index.html  mod.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: bus.rs  command.rs  envelope.rs  event.rs  handler.rs  in_memory_bus.rs  lib.rs  projection.rs  runner.rs  saga.rs  tenant.rs
crates/infra/: Cargo.toml  README.md
crates/infra/benches/: event_sourcing_benchmarks.rs
crates/infra/src/: command_dispatcher.rs  integration_tests.rs  lib.rs
crates/infra/src/ai/: inventory_anomaly_runner.rs  mod.rs
crates/infra/src/event_bus/: mod.rs  redis_pubsub.rs  redis_streams.rs
crates/infra/src/event_store/: in_memory.rs  mod.rs  postgres.rs  postgres_flow.md  query.rs  trait.rs
crates/infra/src/jobs/: executor.rs  mod.rs  store.rs  types.rs
crates/infra/src/projections/: accounting.rs  cursor_store.rs  customer_balances.rs  inventory_stock.rs  inventory_valuation.rs  invoices.rs  invoicing.rs  mod.rs  open_invoices.rs  parties.rs  products.rs  purchasing.rs  replay.rs  sales_orders.rs  users.rs
crates/infra/src/read_model/: mod.rs  postgres.rs  tenant_store.rs
crates/infra/src/saga/: mod.rs  sales_ar.rs
crates/infra/src/workers/: mod.rs  projection_worker.rs
crates/inventory/: Cargo.toml  README.md
crates/inventory/src/: item.rs  lib.rs
crates/invoicing/: Cargo.toml
crates/invoicing/src/: invoice.rs  lib.rs
crates/observability/: Cargo.toml  README.md
crates/observability/src/: lib.rs  tracing.rs
crates/parties/: Cargo.toml
crates/parties/src/: lib.rs  party.rs
crates/products/: Cargo.toml  README.md
crates/products/src/: lib.rs  product.rs
crates/purchasing/: Cargo.toml
crates/purchasing/src/: lib.rs  order.rs
crates/sales/: Cargo.toml
crates/sales/src/: lib.rs  order.rs
docker/: api.Dockerfile  migrate.Dockerfile
docker/migrations/: .gitkeep  001_create_events_table.sql  002_create_snapshots_table.sql  003_create_rls_policies.sql  004_create_read_models.sql  README.md
docs/: ARCHITECTURE.md  PROJECTION_REBUILD_FLOW.md  REDIS_STREAMS_FLOW.md
scripts/: migrate.sh
