[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/events",
  "crates/auth",
  "crates/api",
  "crates/ai",
  "crates/inventory",
  "crates/parties",
  "crates/products",
  "crates/sales",
  "crates/invoicing",
  "crates/purchasing",
  "crates/accounting",
  "crates/infra",
  "crates/observability",
  "crates/desktop",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
