[package]
name = "forgeerp-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "forgeerp-api"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

forgeerp-observability = { path = "../observability" }
forgeerp-auth = { path = "../auth" }
forgeerp-core = { path = "../core" }
forgeerp-infra = { path = "../infra" }
forgeerp-inventory = { path = "../inventory" }
forgeerp-events = { path = "../events" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"


