[package]
name = "forgeerp-auth"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
forgeerp-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


