[package]
name = "forgeerp-auth"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
forgeerp-core = { path = "../core" }
forgeerp-events = { path = "../events" }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9"

[dev-dependencies]
proptest = { workspace = true }


