[package]
name = "forgeerp-infra"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
forgeerp-core = { path = "../core" }
forgeerp-events = { path = "../events" }
forgeerp-inventory = { path = "../inventory" }
forgeerp-parties = { path = "../parties" }
forgeerp-invoicing = { path = "../invoicing" }
forgeerp-accounting = { path = "../accounting" }
forgeerp-products = { path = "../products" }
forgeerp-sales = { path = "../sales" }
forgeerp-purchasing = { path = "../purchasing" }
forgeerp-auth = { path = "../auth" }
forgeerp-ai = { path = "../ai" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { version = "0.25", optional = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"], default-features = false }
tokio = { version = "1", features = ["rt"] }
async-trait = "0.1"

[[bench]]
name = "event_sourcing_benchmarks"
harness = false

[dev-dependencies]
criterion = { workspace = true }


